--- a/.github/workflows/pr-ci.yml
+++ b/.github/workflows/pr-ci.yml
@@ -430,9 +430,11 @@ jobs:
 
           # Replace binary names with target os
           find ./bin -name "devpod-linux-amd64" -exec mv {} ./bin/devpod-cli-x86_64-unknown-linux-gnu \;
+          find ./bin -name "devpod-linux-arm64" -exec mv {} ./bin/devpod-cli-aarch64-unknown-linux-gnu \;
           find ./bin -name "devpod-darwin-amd64" -exec mv {} ./bin/devpod-cli-x86_64-apple-darwin \;
           find ./bin -name "devpod-darwin-arm64" -exec mv {} ./bin/devpod-cli-aarch64-apple-darwin \;
-          find ./bin -name "devpod-windows-amd64" -exec mv {} ./bin/devpod-cli-x86_64-pc-windows-msvc.exe \;
+          find ./bin -name "devpod-windows-amd64.exe" -exec mv {} ./bin/devpod-cli-x86_64-pc-windows-msvc.exe \;
+          find ./bin -name "devpod-windows-arm64.exe" -exec mv {} ./bin/devpod-cli-aarch64-pc-windows-msvc.exe \;
 
           ls -R ./bin/
 
