--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -126,9 +126,9 @@ jobs:
 
           ls -R "$TEMP_DIR/devpod-bin/"
           mkdir -p ./bin/
-          # Copy all devpod binaries to bin directory
-          find "$TEMP_DIR/devpod-bin/" -name "devpod-*" -exec cp {} ./bin \;
-          find ./bin -name "devpod-*" -exec chmod +x {} \;
+          find "$TEMP_DIR/devpod-bin/" -type f -name "devpod-*" -exec cp {} ./bin \;
+          find ./bin -type f -name "devpod-*" -exec chmod +x {} \;
+          ls -R ./bin/
 
       - name: generate pro provider
         if: matrix.arch == 'amd64' && matrix.runner == 'ubuntu-latest'
@@ -137,13 +137,12 @@ jobs:
 
       - name: rename binaries for desktop build
         run: |
-          find ./bin -name "devpod-linux-amd64" -exec mv {} ./bin/devpod-cli-x86_64-unknown-linux-gnu \;
-          find ./bin -name "devpod-linux-arm64" -exec mv {} ./bin/devpod-cli-aarch64-unknown-linux-gnu \;
-          find ./bin -name "devpod-darwin-amd64" -exec mv {} ./bin/devpod-cli-x86_64-apple-darwin \;
-          find ./bin -name "devpod-darwin-arm64" -exec mv {} ./bin/devpod-cli-aarch64-apple-darwin \;
-          find ./bin -name "devpod-windows-amd64.exe" -exec mv {} ./bin/devpod-cli-x86_64-pc-windows-msvc.exe \;
-          find ./bin -name "devpod-windows-arm64.exe" -exec mv {} ./bin/devpod-cli-aarch64-pc-windows-msvc.exe \;
-
+          find ./bin -type f -name "devpod-linux-amd64" -exec mv {} ./bin/devpod-cli-x86_64-unknown-linux-gnu \;
+          find ./bin -type f -name "devpod-linux-arm64" -exec mv {} ./bin/devpod-cli-aarch64-unknown-linux-gnu \;
+          find ./bin -type f -name "devpod-darwin-amd64" -exec mv {} ./bin/devpod-cli-x86_64-apple-darwin \;
+          find ./bin -type f -name "devpod-darwin-arm64" -exec mv {} ./bin/devpod-cli-aarch64-apple-darwin \;
+          find ./bin -type f -name "devpod-windows-amd64.exe" -exec mv {} ./bin/devpod-cli-x86_64-pc-windows-msvc.exe \;
+          find ./bin -type f -name "devpod-windows-arm64.exe" -exec mv {} ./bin/devpod-cli-aarch64-pc-windows-msvc.exe \;
           ls -R ./bin/
 
       - name: install linux dependencies
