--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -80,9 +80,6 @@ jobs:
     steps:
       - uses: actions/checkout@v6
 
-      - name: setup Task
-        uses: go-task/setup-task@v1
-
       - name: setup Node
         uses: actions/setup-node@v6
         with:
@@ -158,7 +155,7 @@ jobs:
             patchelf
 
       - name: install desktop dependencies
-        run: task desktop:build && task desktop:tauri:generate-types
+        run: yarn install --frozen-lockfile
 
       - name: tauri build
         uses: tauri-apps/tauri-action@v0.6
