fixup!: yarn install directory
Signed-off-by: Samuel K <skevetter@pm.me>

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -155,6 +155,7 @@ jobs:
             patchelf
 
       - name: install desktop dependencies
+        working-directory: ./desktop
         run: yarn install --frozen-lockfile
 
       - name: tauri build
