--- a/.github/workflows/pr-ci.yml
+++ b/.github/workflows/pr-ci.yml
@@ -1,10 +1,10 @@
 name: Pull Request
 
 on:
-  push:
-    branches: [main]
+  # push:
+  #   branches: [main]
   workflow_dispatch:
-  pull_request:
+  # pull_request:
 
 jobs:
   can-read-secret:
