fixup!: include updater json
Signed-off-by: Samuel K <skevetter@pm.me>

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -62,19 +62,19 @@ jobs:
           - arch: amd64
             target: x86_64-apple-darwin
             runner: macos-latest
-            tauri_include_updater_json: false
+            tauri_include_updater_json: true
             tauri_ci: true
 
           - arch: arm64
             target: aarch64-apple-darwin
             runner: macos-latest
-            tauri_include_updater_json: false
+            tauri_include_updater_json: true
             tauri_ci: false # https://github.com/tauri-apps/tauri/issues/3055
 
           - arch: amd64
             target: x86_64-pc-windows-msvc
             runner: windows-latest
-            tauri_include_updater_json: false
+            tauri_include_updater_json: true
             tauri_ci: true
     runs-on: ${{ matrix.runner }}
     steps:
