--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -205,12 +205,15 @@ jobs:
   build-flatpak:
     name: Build Flatpak
     runs-on: ubuntu-latest
-    needs: build-desktop
+    needs: [build-desktop]
     container:
       image: ghcr.io/flathub-infra/flatpak-github-actions:gnome-48
       options: --privileged
     steps:
       - uses: actions/checkout@v6
+
+      - name: clone shared-modules
+        run: git clone https://github.com/flathub/shared-modules.git desktop/flatpak/shared-modules
 
       - name: download desktop linux artifact
         uses: actions/download-artifact@v7
