fixup!: apply formatting fix
Signed-off-by: Samuel K <skevetter@pm.me>

--- a/desktop/flatpak/sh.loft.devpod.yml
+++ b/desktop/flatpak/sh.loft.devpod.yml
@@ -1,7 +1,7 @@
 id: sh.loft.devpod
 
 runtime: org.gnome.Platform
-runtime-version: '48'
+runtime-version: "48"
 sdk: org.gnome.Sdk
 
 command: "sh.loft.devpod"
