--- a/.github/workflows/pr-ci.yml
+++ b/.github/workflows/pr-ci.yml
@@ -472,6 +472,8 @@ jobs:
           projectPath: "./desktop"
           args: "--target ${{ matrix.target }}"
           includeUpdaterJson: ${{ matrix.tauri_include_updater_json }}
+          assetNamePattern: "[name]_[platform]_[arch][ext]"
+          retryAttempts: 1
         env:
           GITHUB_TOKEN: ${{ github.token }}
           TAURI_SIGNING_PRIVATE_KEY: "${{ github.workspace }}/desktop/app.key"
@@ -483,3 +485,49 @@ jobs:
         with:
           name: desktop-${{ matrix.runner }}-${{ matrix.arch }}
           path: desktop/src-tauri/target/${{ matrix.target }}/release/bundle/**/*
+
+  build-flatpak:
+    name: Build Flatpak
+    runs-on: ubuntu-latest
+    needs: [build-desktop]
+    container:
+      image: ghcr.io/flathub-infra/flatpak-github-actions:gnome-48
+      options: --privileged
+    steps:
+      - uses: actions/checkout@v6
+
+      - name: clone shared-modules
+        run: git clone https://github.com/flathub/shared-modules.git desktop/flatpak/shared-modules
+
+      - name: download desktop linux artifact
+        uses: actions/download-artifact@v7
+        with:
+          name: devpod-ubuntu-latest-amd64
+          path: ${{ runner.temp }}/devpod/
+
+      - name: update flatpak metadata version and date
+        shell: bash
+        run: |
+          DATE=$(date +%Y-%m-%d)
+          VERSION="v0.0.0-flatpak"
+
+          # Update metainfo.xml
+          sed -i "s/__VERSION__/${VERSION}/g" ./desktop/flatpak/DevPod.metainfo.xml
+          sed -i "s/__DATE__/${DATE}/g" ./desktop/flatpak/DevPod.metainfo.xml
+
+          # Calculate SHA256 values and update Flatpak manifest template
+          DEB_SHA256=$(sha256sum ${{ runner.temp }}/devpod/DevPod_*_amd64.deb | cut -d' ' -f1)
+          META_SHA256=$(sha256sum ./desktop/flatpak/DevPod.metainfo.xml | cut -d' ' -f1)
+          DESKTOP_SHA256=$(sha256sum ./desktop/flatpak/DevPod.desktop | cut -d' ' -f1)
+
+          sed -i "s/\${VERSION}/${VERSION}/g" ./desktop/flatpak/sh.loft.devpod.yml
+          sed -i "s/\${SHA256}/${DEB_SHA256}/g" ./desktop/flatpak/sh.loft.devpod.yml
+          sed -i "s/\${DESKTOP_SHA256}/${DESKTOP_SHA256}/g" ./desktop/flatpak/sh.loft.devpod.yml
+          sed -i "s/\${META_SHA256}/${META_SHA256}/g" ./desktop/flatpak/sh.loft.devpod.yml
+
+      - uses: flatpak/flatpak-github-actions/flatpak-builder@v6
+        with:
+          bundle: DevPod.flatpak
+          manifest-path: desktop/flatpak/sh.loft.devpod.yml
+          cache-key: flatpak-builder-${{ github.sha }}
+          upload-artifact: true
