fix: temp download dir
Signed-off-by: Samuel K <skevetter@pm.me>

--- a/.github/workflows/pr-ci.yml
+++ b/.github/workflows/pr-ci.yml
@@ -503,7 +503,7 @@ jobs:
         uses: actions/download-artifact@v7
         with:
           name: desktop-ubuntu-latest-amd64
-          path: ${{ runner.temp }}/devpod/
+          path: /tmp/devpod/
 
       - name: update flatpak metadata version and date
         shell: bash
@@ -511,14 +511,14 @@ jobs:
           DATE=$(date +%Y-%m-%d)
           VERSION="v0.0.0"
 
-          ls -R ${{ runner.temp }}/devpod/
+          ls -R /tmp/devpod/
 
           # Update metainfo.xml
           sed -i "s/__VERSION__/${VERSION}/g" ./desktop/flatpak/DevPod.metainfo.xml
           sed -i "s/__DATE__/${DATE}/g" ./desktop/flatpak/DevPod.metainfo.xml
 
           # Calculate SHA256 values and update Flatpak manifest template
-          DEB_SHA256=$(sha256sum ${{ runner.temp }}/devpod/DevPod_*_amd64.deb | cut -d' ' -f1)
+          DEB_SHA256=$(sha256sum /tmp/devpod/DevPod_*_amd64.deb | cut -d' ' -f1)
           META_SHA256=$(sha256sum ./desktop/flatpak/DevPod.metainfo.xml | cut -d' ' -f1)
           DESKTOP_SHA256=$(sha256sum ./desktop/flatpak/DevPod.desktop | cut -d' ' -f1)
 
